syntax ="proto3";
import "pb_enum/enum.proto";
package pb_user;
option go_package = "lark/pkg/proto/pb_user;pb_user";

message UserInfoReq {
  int64 uid = 1;
}

message UserInfoResp {
  int32 code = 1;
  string msg = 2;
  UserInfo user_info = 3;
}

message UserInfo {
  int64 uid = 1; // uid
  string lark_id = 2; // 账户ID
  int32 status = 3; // 用户状态
  string nickname = 4; // 昵称
  string firstname = 5; // firstname
  string lastname = 6; // lastname
  int32 gender = 7; // 性别
  int64 birth_ts = 8; // 生日
  string email = 9; // Email
  string mobile = 10; // 手机号
  int64 city_id = 11; // 城市ID
  pb_enum.PLATFORM_TYPE platform = 12;// 最后登录的平台
  int32 server_id = 13;//分配的ws服务器
  UserAvatar avatar = 14; // 头像
}

message UserAvatar {
  int64 uid = 1;
  string avatar_small = 2;
  string avatar_medium = 3;
  string avatar_large = 4;
}

message GetUserListReq {
  repeated int64 uid_list = 1;
}

message GetUserListResp {
  int32 code = 1;
  string msg = 2;
  repeated UserInfo list = 3;
}

message GetChatUserInfoReq {
  int64 uid = 1; // uid
}

message GetChatUserInfoResp {
  int32 code = 1;
  string msg = 2;
  ChatUserInfo info = 3;
}

//聊天中用到的用户信息
message ChatUserInfo {
  int64 uid = 1; // uid
  string lark_id = 2; // 账户ID
  string nickname = 3; // 昵称
  int32 gender = 4; // 性别
  string avatar_url = 5; // 头像
}

message UserOnlineReq {
  int64 uid = 1;
  int32 server_id = 2; // 分配的ws服务器
  pb_enum.PLATFORM_TYPE platform = 3; // 上线终端平台
}

message UserOnlineResp {
  int32 code = 1;
  string msg = 2;
}

message SetUserAvatarReq {
  int64 uid = 1;
  string avatar_small = 2;
  string avatar_medium = 3;
  string avatar_large = 4;
}

message SetUserAvatarResp {
  int32 code = 1;
  string msg = 2;
  UserAvatar avatar = 3; // 头像
}

service User {
  rpc GetUserInfo(UserInfoReq) returns(UserInfoResp);
  rpc GetUserList(GetUserListReq) returns(GetUserListResp);
  rpc GetChatUserInfo(GetChatUserInfoReq) returns(GetChatUserInfoResp);
  rpc UserOnline(UserOnlineReq) returns(UserOnlineResp);
  rpc SetUserAvatar(SetUserAvatarReq) returns(SetUserAvatarResp);
}